--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
-/* *{
-    margin: 0;
-    padding: 0;
+ *{
+    /* margin: 0;
+    padding: 0;  */
     box-sizing: border-box;
-} */
+} 
 
 /* COMMON */
+th, td{
+    text-align: left;
+}
 
 /* HEADER */
 header{
@@ -32,4 +35,19 @@ h1{
 
 .creator{
     color: aqua;
+}
+
+table{
+    border-collapse: collapse;
+}
+
+thead{
+    color: white;
+    background-color: rgb(61, 97, 240);
+}
+
+tr:nth-child(odd){background-color: cyan;}
+
+.highlights{
+    background-color: gold;
 }
