--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ th, td{
     text-align: left;
 }
 
+.report{
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+}
+
 /* HEADER */
 header{
     height: 200px;
@@ -50,4 +55,20 @@ tr:nth-child(odd){background-color: cyan;}
 
 .highlights{
     background-color: gold;
+}
+
+/* FOOTER */
+.first{ 
+    width: 312px;
+    height: 208px;
+    background-image: url(../img/monitor.jpg);
+    
+}
+.second{
+    width: 311px;
+    height: 207px;
+    background-image: url(../img/graph.jpg);
+}
+.report{
+    color: darkgrey;
 }
